fix: word break to avoid overflow in notifications
happended for example with account addresses

--- a/src/containers/BlockingNotifications/BlockingNotifications.scss
+++ b/src/containers/BlockingNotifications/BlockingNotifications.scss
@@ -10,6 +10,11 @@
 
     z-index: $z-index + 10;
 
+    & .body {
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+    }
+
     & header {
       display: flex;
       align-items: center;
